--- a/src/app/ideation/components/add-idea/add-idea.component.scss
+++ b/src/app/ideation/components/add-idea/add-idea.component.scss
@@ -96,6 +96,13 @@
 
       #navigate_create:first-child {
         order: 2;
+
+        .btn_medium_wrapper {
+          width: 100%;
+          padding-top: 16px;
+          margin-top: 8px;
+          border-top: 1px solid var(--color-border);
+        }
       }
 
       #navigate_create:last-child {
@@ -221,6 +228,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  .form_header_title {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
 }
 #anonymous_info_wrap {
   display: flex;
