--- a/src/styles.scss
+++ b/src/styles.scss
@@ -307,7 +307,6 @@ input {
     box-shadow: 0px 8px 20px 0px rgba(220, 231, 240, 0.3),
       0px 12px 16px 0px rgba(50, 85, 112, 0.1);
 
-
     &.filter_options {
       padding: 16px 8px;
     }
@@ -1847,14 +1846,14 @@ tour-item-template {
       margin-top: 12px;
       float: right;
       @include mixins.mobile {
-        float:none;
+        float: none;
       }
     }
     .separator {
       margin-top: 16px;
       float: right;
       @include mixins.mobile {
-        float:none;
+        float: none;
       }
     }
     .write,
@@ -2332,5 +2331,92 @@ topic-milestones {
     &.show {
       display: contents;
     }
+  }
+}
+
+@keyframes load3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.loader_text {
+  color: var(--color-link);
+}
+
+.loader_wrapper {
+  --loader-width: 24px;
+  --loader-height: 24px;
+  width: var(--loader-width);
+  height: var(--loader-height);
+
+  .loader {
+    font-size: 10px;
+    text-indent: -9999em;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: var(--color-link);
+    background: -moz-linear-gradient(
+      left,
+      var(--color-link) 10%,
+      rgba(6, 128, 252, 0) 42%
+    );
+    background: -webkit-linear-gradient(
+      left,
+      var(--color-link) 10%,
+      rgba(6, 128, 252, 0) 42%
+    );
+    background: -o-linear-gradient(
+      left,
+      var(--color-link) 10%,
+      rgba(6, 128, 252, 0) 42%
+    );
+    background: -ms-linear-gradient(
+      left,
+      var(--color-link) 10%,
+      rgba(6, 128, 252, 0) 42%
+    );
+    background: linear-gradient(
+      to right,
+      var(--color-link) 10%,
+      rgba(6, 128, 252, 0) 42%
+    );
+    position: relative;
+    -webkit-animation: load3 1.4s infinite linear;
+    animation: load3 1.4s infinite linear;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+
+  .loader:before {
+    width: 50%;
+    height: 50%;
+    background: var(--color-link);
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+  }
+
+  .loader:after {
+    background: var(--color-surface-contrast);
+    width: calc(var(--loader-width) - 10px);
+    height: calc(var(--loader-height) - 10px);
+    border-radius: 50%;
+    content: "";
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 }
