--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -209,6 +209,7 @@
                     </div>
                   </div>
                 </cos-input>
+
                 <cos-input [placeholder]="'COMPONENTS.TOPIC_IDEATION.IDEA_FILTER_ORDER' | translate"
                   class="dropdown_input">
                   <div class="dropdown" [cosDropdown]>
@@ -248,6 +249,7 @@
                     </div>
                   </div>
                 </cos-input>
+
                 <cos-input [placeholder]="'COMPONENTS.TOPIC_IDEATION.IDEA_FILTER_PARTICIPANTS' | translate"
                   class="dropdown_input">
                   <div class="dropdown" [cosDropdown]>
@@ -290,7 +292,97 @@
                     </div>
                   </div>
                 </cos-input>
+              
+                <cos-input *ngIf="hasDemograficsField.age" [placeholder]="'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE' | translate"
+                  class="dropdown_input">
+                  <div class="dropdown" [cosDropdown]>
+                    <div class="selection">
+                      <div class="selected_item">
+                        <span *ngIf="!ideaFilters.age" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL"></span>
+                        <span *ngIf="ideaFilters.age">
+                          {{ideaFilters.age}}
+                        </span>
+                      </div>
+                      <div><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path d="M17 10L12 15L7 10" stroke="#2C3B47" stroke-width="2" stroke-linecap="round" />
+                        </svg>
+                      </div>
+                    </div>
+                    <div class="options">
+                      <div class="option" (click)="setAge('')" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL">
+                      </div>
+                      <div *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="option" (click)="setAge((i + 1))">
+                        {{ i + 1 }}
+                      </div>
+                    </div>
+                  </div>
+                </cos-input>
+
+                <cos-input *ngIf="hasDemograficsField.gender" [placeholder]="'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER' | translate"
+                  class="dropdown_input">
+                  <div class="dropdown" [cosDropdown]>
+                    <div class="selection">
+                      <div class="selected_item">
+                        <span *ngIf="!ideaFilters.gender" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL"></span>
+                        <span *ngIf="ideaFilters.gender === 'male'">
+                          {{'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER_MALE'
+                          |
+                          translate}}</span>
+                        <span *ngIf="ideaFilters.gender === 'female'">
+                          {{'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER_FEMALE'
+                          |
+                          translate}}</span>
+                        <span *ngIf="ideaFilters.gender === 'other'">
+                          {{'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER_OTHER_PLACEHOLDER'
+                          |
+                          translate}}</span>
+                      </div>
+                      <div><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path d="M17 10L12 15L7 10" stroke="#2C3B47" stroke-width="2" stroke-linecap="round" />
+                        </svg>
+                      </div>
+                    </div>
+                    <div class="options">
+                      <div class="option" (click)="setGender('')" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL">
+                      </div>
+                      <div *ngFor="let gender of ['female', 'male', 'other']" class="option" (click)="setGender(gender)">
+                        {{ "VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER_" + (gender === "other" ? gender + "_placeholder" : gender).toUpperCase() | translate }}
+                      </div>
+                    </div>
+                  </div>
+                </cos-input>
+ 
+                <cos-input *ngIf="isCountryEstonia && hasDemograficsField.residence" [placeholder]="'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE' | translate"
+                  class="dropdown_input">
+                  <div class="dropdown" [cosDropdown]>
+                    <div class="selection">
+                      <div class="selected_item">
+                        <span *ngIf="!ideaFilters.residence" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL"></span>
+                        <span *ngIf="ideaFilters.residence">
+                          {{ideaFilters.residence | titlecase}}
+                        </span>
+                      </div>
+                      <div><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path d="M17 10L12 15L7 10" stroke="#2C3B47" stroke-width="2" stroke-linecap="round" />
+                        </svg>
+                      </div>
+                    </div>
+                    <div class="options">
+                      <div class="option" (click)="setResidence('')" translate="COMPONENTS.TOPIC_IDEATION.FILTER_ALL">
+                      </div>
+                      <div *ngFor="let residence of municipalities;" class="option" (click)="setResidence((residence.name))">
+                        {{ residence.name }}
+                      </div>
+                      <div class="option" (click)="setResidence('other')" translate="VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER">
+                      </div>
+                    </div>
+                  </div>
+                </cos-input>
               </div>
+
               <!--MOBILE_TOPIC_FILTERS-->
               <div class="dropdown mobile_filters_selection mobile_show"
                 [ngClass]="{'dropdown_active': mobileIdeaFiltersList}">
@@ -323,6 +415,7 @@
                         translate}}</span>
                     </span>
                   </a>
+
                   <a class="filter_option" (click)="mobileIdeaFilters.orderBy = true">
                     <span class="filter_option_text" translate="COMPONENTS.TOPIC_IDEATION.IDEA_FILTER_ORDER"></span>
                     <span class="bold">
@@ -340,6 +433,7 @@
                         translate}}</span>
                     </span>
                   </a>
+
                   <a class="filter_option" (click)="mobileIdeaFilters.participants = true">
                     <span class="filter_option_text" translate="COMPONENTS.TOPIC_IDEATION.IDEA_FILTER_PARTICIPANTS"></span>
                     <span class="bold">{{(ideaFilters.participants.name)?
@@ -347,6 +441,22 @@
                       'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' |
                       translate | titlecase}}</span>
                   </a>
+
+                  <a class="filter_option" (click)="mobileIdeaFilters.age = true">
+                    <span class="filter_option_text" translate="VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_AGE"></span>
+                    <span class="bold">{{(ideaFilters.age) ? ideaFilters.age : 'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate}}</span>
+                  </a>
+
+                  <a class="filter_option" (click)="mobileIdeaFilters.gender = true">
+                    <span class="filter_option_text" translate="VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER"></span>
+                    <span class="bold">{{(ideaFilters.gender) ? (ideaFilters.gender | titlecase) : 'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate}}</span>
+                  </a>
+
+                  <a *ngIf="isCountryEstonia" class="filter_option" (click)="mobileIdeaFilters.residence = true">
+                    <span class="filter_option_text" translate="VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE"></span>
+                    <span class="bold">{{(ideaFilters.residence) ? (ideaFilters.residence | titlecase) : 'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate}}</span>
+                  </a>
+
                   <button (click)="doClearFilters()" class="btn_medium_plain">
                     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -496,8 +606,99 @@
                     (click)="setParticipant(mobileIdeaFilters.participants);mobileIdeaFilters.participants= false;"
                     translate="COMPONENTS.TOPIC_IDEATION.BTN_APPLY"></button>
                 </div>
+
+                <div class="options button_options" *ngIf="mobileIdeaFilters.age">
+                  <a class="btn_medium_close icon" (click)="closeMobileFilter()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289Z"
+                        fill="#2C3B47" />
+                    </svg>
+                  </a>
+
+                  <div class="options_wrapper">
+                    <label class="checkbox" (click)="mobileIdeaFilters.age = 'all';">
+                      <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
+                      <input type="radio" name="orderBy">
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label *ngFor="let number of [].constructor(AGE_LIMIT); let i = index" class="checkbox" (click)="mobileIdeaFilters.age = i + 1;">
+                      <span>{{ i + 1 }}</span>
+                      <input type="radio" name="age">
+                      <span class="checkmark"></span>
+                    </label>
+                  </div>
+
+                  <button class="btn_medium_secondary"
+                    (click)="setAge(mobileIdeaFilters.age);mobileIdeaFilters.age= false;"
+                    translate="COMPONENTS.TOPIC_IDEATION.BTN_APPLY"></button>
+                </div>
+
+                <div class="options button_options" *ngIf="mobileIdeaFilters.gender">
+                  <a class="btn_medium_close icon" (click)="closeMobileFilter()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289Z"
+                        fill="#2C3B47" />
+                    </svg>
+                  </a>
+
+                  <div class="options_wrapper">
+                    <label class="checkbox" (click)="mobileIdeaFilters.gender = 'all';">
+                      <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
+                      <input type="radio" name="gebder">
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label *ngFor="let gender of ['female', 'male', 'other']" class="checkbox" (click)="mobileIdeaFilters.gender = gender;">
+                      <span>{{ "VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_GENDER_" + (gender === "other" ? gender + "_placeholder" : gender).toUpperCase() | translate }}</span>
+                      <input type="radio" name="orderBy">
+                      <span class="checkmark"></span>
+                    </label>
+                  </div>
+
+                  <button class="btn_medium_secondary"
+                    (click)="setGender(mobileIdeaFilters.gender);mobileIdeaFilters.gender= false;"
+                    translate="COMPONENTS.TOPIC_IDEATION.BTN_APPLY"></button>
+                </div>
+
+                <div class="options button_options" *ngIf="mobileIdeaFilters.residence">
+                  <a class="btn_medium_close icon" (click)="closeMobileFilter()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289Z"
+                        fill="#2C3B47" />
+                    </svg>
+                  </a>
+
+                  <div class="options_wrapper">
+                    <label class="checkbox" (click)="mobileIdeaFilters.residence= 'all';">
+                      <span [innerHTML]="'COMPONENTS.TOPIC_IDEATION.FILTER_ALL' | translate | titlecase"></span>
+                      <input type="radio" name="orderBy">
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label *ngFor="let residence of municipalities; let i = index" class="checkbox" (click)="mobileIdeaFilters.residence= residence.name;">
+                      <span>{{ residence.name }}</span>
+                      <input type="radio" name="age">
+                      <span class="checkmark"></span>
+                    </label>
+
+                    <label class="checkbox" (click)="mobileIdeaFilters.residence= 'other';">
+                      <span>{{ 'VIEWS.IDEATION_CREATE.DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER' | translate | titlecase }}</span>
+                      <input type="radio" name="age">
+                      <span class="checkmark"></span>
+                    </label>
+                  </div>
+
+                  <button class="btn_medium_secondary"
+                    (click)="setResidence(mobileIdeaFilters.residence);mobileIdeaFilters.residence= false;"
+                    translate="COMPONENTS.TOPIC_IDEATION.BTN_APPLY"></button>
+                </div>
               </div>
             </div>
+
             <div class="selected_participant_wrap" *ngIf="ideaFilters.participants.name">
               <div class="participant_row">
                 <div class="row_label">
