Revert "update check"
This reverts commit acabab77255ce85eb2d92cb9e4eaad1a4f23a9cb.

--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -748,7 +748,8 @@
                     <ng-container *ngIf="
                         (auth.loggedIn$ | async) &&
                         TopicService.canEdit(topic) &&
-                        !topic.voteId
+                        !topic.voteId &&
+                        !topic.ideationId
                       ">
                       <div class="line_separator"></div>
                       <button class="option" [routerLink]="['/', 'topics', 'edit', topic.id]">
@@ -1650,7 +1651,8 @@
           <ng-container *ngIf="
               (auth.loggedIn$ | async) &&
               TopicService.canEdit(topic) &&
-              !topic.voteId
+              !topic.voteId &&
+              !topic.ideationId
             ">
             <div class="line_separator"></div>
             <button class="option" [routerLink]="['/', 'topics', 'edit', topic.id]">
