--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -766,11 +766,12 @@
                     </ng-container>
                     <ng-container *ngIf="
                         (auth.loggedIn$ | async) &&
+                        TopicService.canEdit(topic) &&
                         topic.ideationId &&
                         !topic.voteId &&
-                        TopicService.canEdit(topic) &&
                         [
                           TopicService.STATUSES.draft,
+                          TopicService.STATUSES.inProgress,
                           TopicService.STATUSES.ideation,
                           TopicService.STATUSES.followUp
                         ].indexOf(topic.status) > -1
@@ -796,10 +797,11 @@
                     </ng-container>
                     <ng-container *ngIf="
                         (auth.loggedIn$ | async) &&
-                        topic.voteId &&
                         TopicService.canEdit(topic) &&
+                        topic.voteId &&
                         [
                           TopicService.STATUSES.draft,
+                          TopicService.STATUSES.inProgress,
                           TopicService.STATUSES.voting,
                           TopicService.STATUSES.followUp
                         ].indexOf(topic.status) > -1
